Fixed overlapped Modal with mobile menu

--- a/cli/docs-builder/templates/assets/style.css
+++ b/cli/docs-builder/templates/assets/style.css
@@ -1115,7 +1115,7 @@ body {
         bottom: 0;
         background: var(--ts-gray-300);
         backdrop-filter: blur(1px);
-        z-index: 10;
+        z-index: 101;
         display: none;
     }
 
